k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: <your-ns>
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /<your-name>-youtubebot
            pathType: Prefix
            backend:
              service:
                name: youtube-bot-service
                port:
                  number: 8080
